2006-05-11  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: Gradually restoring functionality.

2006-05-10  Derek Price  <derek@ximbiot.com>

	* commit_prep.pl, log_accum.pl: More simplification and cleanup.  Diff
	and URL functionality temporarily disabled.

2006-05-09  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: First pass at organizing and eliminating globals.  Does
	not alter functionality.

	* log_accum.pl: Comment out debug prints.

	* log_accum.pl: Handle file names with spaces.
	($CVSWEB_URI): Remove trailing /.
	(@path): Delete global.
	(change_summary): Accept module argument.  Avoid unneeded variable
	indirections.
	(derive_subject_from_changes_file, mail_notification): Accept module
	argument.
	(process_argv): Return module instead of file list.

	* commit_prep.pl: Update copyright year.
	* log_accum.pl: Update copyright year.  Restore taint checks and add
	some additional untainting code.  Update doc.

2006-05-08  Derek Price  <derek@ximbiot.com>

	* log_accum.pl: -r now also accepts 'HEAD' as argument (clearer than
	'').  Viewcvs URL's for binary files now use application/octet-stream
	content type; diff URLs are also more compatible with viewcvs (removed
	'.diff').  Add -E option to avoid the diff if a file is added or
	removed.
	(Original patch from Sylvain Beucler <beuc@beuc.net>.)

	* commit_prep.pl: Option -T added to support multiple log_accum hooks.
	Deprecated misleading -u option.  Used 'use strict' and added
	compatibility for 'perl -T' switch.  Documented some more.  Removed
	$cvs_user in the temporary filename.
	* log_accum.pl: -T added again to support multiple log_accum hooks.
	Used 'use strict' and added compatibility for 'perl -T' switch.
	Removed ghost variable.  Documented some more.  Fixed a bug in
	processing -u in log_accum.  Cleaned-up the temporary filenames.  Fixed
	support for UseNewInfoFmtStrings.  Test if files are empty, so they are
	not reported as binary.
	(Patch from Sylvain Beucler <beuc@beuc.net>.)
