@@ -1,3 +1,9 @@
+2006-05-12  Derek Price  <derek@ximbiot.com>
+
+	* log_accum.pl: Move argument parsing to Getopt::Long, eliminating
+	more globals.
+	(set_defaults): New function.
+
 2006-05-11  Derek Price  <derek@ximbiot.com>
 
 	* log_accum.pl: Gradually restoring functionality.
